# rust-shark-api

./: .env  Cargo.toml  README.md  docker-compose.yaml  swagger.yaml
migrations/2020-11-29-075231_create_sharks/: down.sql  up.sql
src/: db.rs  error_handler.rs  main.rs  model.rs  routes.rs  schema.rs
