[package]
name = "rust-shark-api"
version = "0.1.0"
authors = ["Takumi ERA <takumi_era@caddi.jp>"]
edition = "2018"

[dependencies]
actix-web = "3.3"
actix-rt = "1.1"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
diesel = { version = "1.4", features = ["postgres", "r2d2", "uuid", "chrono"] }
diesel_migrations = "1.4"
env_logger = "0.8"
lazy_static = "1.4"
log = "0.4"
serde = "1.0"
serde_json = "1.0"
r2d2 = "0.8"
